# ESP-WiFi-App

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
docs/: HTTP_Server.md  OTA_update.md  WiFi_SoftAp.md
main/: CMakeLists.txt  RGB.c  RGB.h  WiFi_App.c  WiFi_App.h  http_server.c  http_server.h  main.c  readme.md  tasks_common.h
